Fix du wrap des description d'activité

--- a/ui/app/styles/public.scss
+++ b/ui/app/styles/public.scss
@@ -1150,7 +1150,7 @@ div[data-focus="field"] [data-focus="field-label-container"].mdl-cell--12-col {
     min-height: 40px;
     margin-top: 5px;
     margin-bottom: 5px;
-    white-space: pre;
+    white-space: pre-wrap;
   }
   .line-info {
     & > *:nth-child(1) {
